--- a/Just Research.ipynb
+++ b/Just Research.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 146,
    "metadata": {
     "collapsed": true
    },
@@ -11,14 +11,14 @@
     "import requests\n",
     "import pandas as pd\n",
     "from clarifai import rest\n",
-    "from clarifai.rest import ClarifaiApp\n",
+    "from clarifai.rest import ClarifaiApp, Image as ClImage\n",
     "import time\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -30,12 +30,14 @@
     "    model = app.models.get(\"general-v1.3\")\n",
     "    # predict with the model\n",
     "#     prediction = model.predict_by_url(url=img)['outputs'][0]['data']['concepts']\n",
-    "    prediction = model.predict_by_filename(img)['outputs'][0]['data']['concepts']\n",
+    "#     prediction = model.predict_by_filename(img)['outputs'][0]['data']['concepts']\n",
+    "    test_image = ClImage(file_obj=open(img, 'rb'))\n",
+    "    prediction = model.predict([test_image])['outputs'][0]['data']['concepts']\n",
     "    tags = pd.DataFrame({'Tag': [], 'Probability': []})\n",
     "    for item in prediction:\n",
     "        tags = tags.append(pd.DataFrame({'Tag': [item['name']], 'Probability': [item['value']]}))\n",
     "#     return tags.reset_index(drop=True)\n",
-    "    tags = list(tagDataset['Tag'])\n",
+    "    tags = list(tags['Tag'])\n",
     "    if('no person' in tags):\n",
     "        tags.remove('no person')\n",
     "    \n",
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -630,6 +632,147 @@
    ],
    "source": [
     "\" \".join(alltags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def urlize(tags):\n",
+    "\t# Returns urls as list\n",
+    "\n",
+    "\turls = []\n",
+    "\tfor tag in tags:\n",
+    "\t\turls.append(\"https://favqs.com/api/quotes/?filter=\" + tag)\n",
+    "\n",
+    "\treturn urls\n",
+    "\n",
+    "headers = {'Authorization' : 'Token token=\"b09904a4d885299ee386f5cbbf795c56\"'}\n",
+    "req = requests.get(\"https://favqs.com/api/quotes/?filter=mountain\", headers = headers)\n",
+    "\n",
+    "def get_quotes(urls):\n",
+    "    quotes = pd.DataFrame({'Quote': [], 'Author': []})\n",
+    "    for url in urls:\n",
+    "        req = requests.get(url, headers = headers).json()\n",
+    "        time.sleep(0.5)\n",
+    "        print \"Processing: \" + url\n",
+    "        for item in req['quotes']:\n",
+    "            if item['body'] != 'No quotes found':\n",
+    "                quotes = quotes.append(pd.DataFrame({'Quote': [item['body']], 'Author': [item['author']]}))\n",
+    "    return quotes.reset_index(drop=True)\n",
+    "\n",
+    "def similarity_matrix(dataframe):\n",
+    "    tfidf = TfidfVectorizer(analyzer = 'word', ngram_range = (1,3), min_df = 0, stop_words = 'english')\n",
+    "    tfidf_matrix = tfidf.fit_transform(dataframe)\n",
+    "    cosine_similarities = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
+    "    return pd.DataFrame(cosine_similarities)\n",
+    "\n",
+    "def best_similarities(dataframe):\n",
+    "    return dataframe[len(dataframe)-1].sort_values(ascending=False)[1:7].reset_index()\n",
+    "\n",
+    "def candidate_indexes(dataframe):\n",
+    "\treturn dataframe['index']\n",
+    "\n",
+    "def candidate_captions(dataframe, indexes):\n",
+    "\tcaptions = []\n",
+    "\tfor index in indexes:\n",
+    "\t\tcaptions.append(dataframe[index])\n",
+    "\treturn captions\n",
+    "\n",
+    "def captionize(img):\n",
+    "    tags = clarifaize(img)\n",
+    "    print \"clarifized\"\n",
+    "    tag_phrase = tagPhrase(tags)\n",
+    "    print \"phrased\"\n",
+    "    urls = urlize(tags)\n",
+    "    print \"urllized\"\n",
+    "    quotes = quotes = pd.DataFrame({'Quote': get_quotes(urls)['Quote'], 'Author': get_quotes(urls)['Author']})\n",
+    "    phrases = quotes.append(pd.DataFrame({'Quote' : [tag_phrase], 'Author': ['No One']})).reset_index(drop=True)\n",
+    "    matrix = similarity_matrix(phrases['Quote'])\n",
+    "    best = best_similarities(matrix)\n",
+    "    captions =candidate_captions(phrases['Quote'] + ' - ' + phrases['Author'], candidate_indexes(best_similarities(matrix)))\n",
+    "    print \"Get ready...\\n\"\n",
+    "    return captions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "clarifized\n",
+      "phrased\n",
+      "urllized\n",
+      "Processing: https://favqs.com/api/quotes/?filter=graphic design\n",
+      "Processing: https://favqs.com/api/quotes/?filter=funny\n",
+      "Processing: https://favqs.com/api/quotes/?filter=fun\n",
+      "Processing: https://favqs.com/api/quotes/?filter=cute\n",
+      "Processing: https://favqs.com/api/quotes/?filter=sketch\n",
+      "Processing: https://favqs.com/api/quotes/?filter=isolated\n",
+      "Processing: https://favqs.com/api/quotes/?filter=character\n",
+      "Processing: https://favqs.com/api/quotes/?filter=vicious\n",
+      "Processing: https://favqs.com/api/quotes/?filter=illustration\n",
+      "Processing: https://favqs.com/api/quotes/?filter=Halloween\n",
+      "Processing: https://favqs.com/api/quotes/?filter=animal\n",
+      "Processing: https://favqs.com/api/quotes/?filter=humor\n",
+      "Processing: https://favqs.com/api/quotes/?filter=scared\n",
+      "Processing: https://favqs.com/api/quotes/?filter=teeth\n",
+      "Processing: https://favqs.com/api/quotes/?filter=alphabet\n",
+      "Processing: https://favqs.com/api/quotes/?filter=vector\n",
+      "Processing: https://favqs.com/api/quotes/?filter=nature\n",
+      "Processing: https://favqs.com/api/quotes/?filter=eye\n",
+      "Processing: https://favqs.com/api/quotes/?filter=art\n",
+      "Processing: https://favqs.com/api/quotes/?filter=graphic design\n",
+      "Processing: https://favqs.com/api/quotes/?filter=funny\n",
+      "Processing: https://favqs.com/api/quotes/?filter=fun\n",
+      "Processing: https://favqs.com/api/quotes/?filter=cute\n",
+      "Processing: https://favqs.com/api/quotes/?filter=sketch\n",
+      "Processing: https://favqs.com/api/quotes/?filter=isolated\n",
+      "Processing: https://favqs.com/api/quotes/?filter=character\n",
+      "Processing: https://favqs.com/api/quotes/?filter=vicious\n",
+      "Processing: https://favqs.com/api/quotes/?filter=illustration\n",
+      "Processing: https://favqs.com/api/quotes/?filter=Halloween\n",
+      "Processing: https://favqs.com/api/quotes/?filter=animal\n",
+      "Processing: https://favqs.com/api/quotes/?filter=humor\n",
+      "Processing: https://favqs.com/api/quotes/?filter=scared\n",
+      "Processing: https://favqs.com/api/quotes/?filter=teeth\n",
+      "Processing: https://favqs.com/api/quotes/?filter=alphabet\n",
+      "Processing: https://favqs.com/api/quotes/?filter=vector\n",
+      "Processing: https://favqs.com/api/quotes/?filter=nature\n",
+      "Processing: https://favqs.com/api/quotes/?filter=eye\n",
+      "Processing: https://favqs.com/api/quotes/?filter=art\n",
+      "Get ready...\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[u'Human nature is not of itself vicious. - Thomas Paine',\n",
+       " u'Of course, I did lots of what would be called graphic design now, what used to be called commercial art. - Leonard Baskin',\n",
+       " u'When you have confidence, you can have a lot of fun. And when you have fun, you can do amazing things. - Joe Namath',\n",
+       " u\"I love graphic design. I love working with design, and I love storytelling, so I've been working on a children's book for a while, and I'd like to see that through. - Colleen Haskell\",\n",
+       " u'Graphic design is the paradise of individuality, eccentricity, heresy, abnormality, hobbies and humors. - George Santayana',\n",
+       " u\"That's something I learned in art school. I studied graphic design in Germany, and my professor emphasized the responsibility that designers and illustrators have towards the people they create things for. - Eric Carle\"]"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "captionize('static/c.png')"
    ]
   },
   {
